[project]
name = "leap-hand-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dynamixel-sdk",
    "numpy>=2.2.6",
    "rerun-sdk>=0.24.1",
    "tyro>=0.9.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source"]

[tool.uv.sources]
dynamixel-sdk = { path = "vendor/dynamixel-sdk/python" }
dex-retargeting = { path = "third_party/dex_retargeting", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]

rl = [
    "rl-games>=1.5.2",
    "pygame>=2.6.1",
    "setuptools>=80.9.0",
]

teleop = [
    "dex-retargeting",
    "loguru>=0.7.3",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "rerun-sdk>=0.24.1",
]
